<resources>
    <string name="app_name">Composition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="number_composition">Состав числа</string>
    <string name="btn_understand">Понятно</string>
    <string name="game_descriptions">Правила игры: перед вами будет три фигуры, две снизу и одна
        сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была
        равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример:
        в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит
        на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="text_level_test">Тестовый</string>
    <string name="text_level_easy">Легкий</string>
    <string name="text_level_normal">Средний</string>
    <string name="text_level_hard">Тяжелый</string>
    <string name="start_point_timer">00:00</string>
    <string name="progress_answers">Правильных ответов: %s (минимум %s)</string>
    <string name="game_over_content_desc">Game Over</string>

    <string name="your_score">Ваш счет: %s</string>
    <string name="minimal_right_answers">Необходимое количество правильных ответов: %s</string>
    <string name="minimal_percent_of_answers">Необходимый процент правильных ответов: %s</string>
    <string name="right_answers_percent">Процент правильных ответов: %s</string>
    <string name="button_try_again">Попробовать снова</string>
    <string name="question_mark">\?</string>
</resources>