<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".presetation.GameFinishedFragment">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/game_over_content_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_required_answers"
        android:src="@drawable/ic_smile_emoji"/>

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:text="@string/minimal_right_answers"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_score_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"/>

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/minimal_percent_of_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"/>

    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/right_answers_percent"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintBottom_toTopOf="@id/button_try_again"/>

    <Button
        android:id="@+id/button_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button_try_again"/>

</androidx.constraintlayout.widget.ConstraintLayout>